--- a/home.html
+++ b/home.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
 </body>
 </html>
